seaqt/QtPositioning/gen_qgeoshape.h

class QGeoCoordinate;
class QGeoRectangle;
class QGeoShape;
class QMetaObject;
typedef struct QGeoCoordinate QGeoCoordinate;
typedef struct QGeoRectangle QGeoRectangle;
typedef struct QGeoShape QGeoShape;
typedef struct QMetaObject QMetaObject;
QGeoShape* QGeoShape_new();
int QGeoShape_type(const QGeoShape* self);
bool QGeoShape_isValid(const QGeoShape* self);
bool QGeoShape_isEmpty(const QGeoShape* self);
bool QGeoShape_contains(const QGeoShape* self, QGeoCoordinate* coordinate);
QGeoRectangle* QGeoShape_boundingGeoRectangle(const QGeoShape* self);
QGeoCoordinate* QGeoShape_center(const QGeoShape* self);
void QGeoShape_extendShape(QGeoShape* self, QGeoCoordinate* coordinate);
bool QGeoShape_operatorEqual(const QGeoShape* self, QGeoShape* other);
bool QGeoShape_operatorNotEqual(const QGeoShape* self, QGeoShape* other);
void QGeoShape_operatorAssign(QGeoShape* self, QGeoShape* from);
struct seaqt_string QGeoShape_toString(const QGeoShape* self);
const QMetaObject* QGeoShape_staticMetaObject();
void QGeoShape_delete(QGeoShape* self);